# prez_gd

./: .gitignore  Cargo.toml  README.md  asset-utils.js  index.html  index.js  package-lock.json  package.json  webgl.code-workspace  webpack.config.js
assets/shaders/: triangle.frag  triangle.vert
src/: console.rs  lib.rs
src/drawables/: basic_background.rs  basic_triangle.rs  mod.rs
src/input/: input_event.rs  keyboard.rs  mod.rs  mouse.rs
src/objects/: app_state.rs  component.rs  game_object.rs  mod.rs  transform.rs
src/renderer/: gl_render.rs  mod.rs
src/utils/: matrix_utils.rs
