[package]
authors = ["The wasm-bindgen Developers"]
edition = "2021"
name = "webgl"
publish = false
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.72"
nalgebra-glm = "0.19.0"
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"

[dependencies.web-sys]
version = "0.3.72"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
  'Performance',
  'MouseEvent',
  'InputEvent',
  'KeyboardEvent',
  'WheelEvent'
]

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true

[package.metadata.wasm-pack.profile.profiling.wasm-bindgen]
dwarf-debug-info = true
